--- a/MagazaUrunTakipSistemi/Views/Kategori/Index.cshtml
+++ b/MagazaUrunTakipSistemi/Views/Kategori/Index.cshtml
@@ -1,8 +1,30 @@
-﻿
+﻿@using MagazaUrunTakipSistemi.Models.Entity
+@model List<TblKategori>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>Index</h2>
+<table class="table table-hover">
+    <thead>
+        <tr>
+            <th>Id</th>
+            <th>Kategori</th>
+            <th>Sil</th>
+            <th>Güncelle</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach(var x in Model)
+        {
+            <tr>
+                <td>@x.Id</td>
+                <td>@x.Ad</td>
+                <td><a href="/Kategori/KategoriSil/@x.Id" class="btn btn-danger">Sil</a></td>
+                <td><a href="/Kategori/KategoriEdit/@x.Id" class="btn btn-primary">Güncelle</a></td>
+            </tr>
+        }
+    </tbody>
+</table>
+<a href="/Kategori/KategoriEkle/" class="btn btn-success">Yeni Kategori Ekle</a>
 
