--- a/MagazaUrunTakipSistemi/Views/Musteri/Index.cshtml
+++ b/MagazaUrunTakipSistemi/Views/Musteri/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@using MagazaUrunTakipSistemi.Models.Entity
-@model List<TblMusteri>
+@using PagedList;
+@using PagedList.Mvc;
+@model PagedList.IPagedList<TblMusteri>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
@@ -32,5 +34,6 @@
         }
     </tbody>
 </table>
+
 <a href="/Musteri/MusteriEkle/" class="btn btn-success">Yeni Musteri Ekle</a>
 
