--- a/MagazaUrunTakipSistemi/Views/Musteri/Index.cshtml
+++ b/MagazaUrunTakipSistemi/Views/Musteri/Index.cshtml
@@ -35,5 +35,8 @@
     </tbody>
 </table>
 
+
+@Html.PagedListPager((IPagedList)Model,sayfa=> Url.Action("Index", new { sayfa}))
+
 <a href="/Musteri/MusteriEkle/" class="btn btn-success">Yeni Musteri Ekle</a>
 
